# youtube-summarizer

./: Cargo.toml  LICENSE  README.md  tauri.conf.json
src/: main.rs
